--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,11 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 h1,
 h2,
 h3,
@@ -24,10 +29,6 @@ ol,
 li {
   margin: 0;
   padding: 0;
-}
-
-a {
-  color: inherit;
 }
 
 button,
